Fix card collapse

--- a/src/css/Card.css
+++ b/src/css/Card.css
@@ -16,7 +16,7 @@
 
 .card-display {
   display: grid;
-  grid-template-columns: minmax(0, 1fr) min(40cqi, 100%);
+  grid-template-columns: 1fr min(40cqi, 100%);
   grid-template-rows: auto 1fr;
   padding: 0;
   height: 100%;
